--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-hw10\utils\config.ini
+hw10/utils/config.ini
